# ab-testing-toolkit

./: README.md  pyproject.toml
.github/workflows/: ci.yml
abtesting/: __init__.py  corrections.py  experiment.py  power.py  sequential.py  utils.py  visualizations.py
notebooks/: testing.ipynb  worked_example.ipynb
tests/: test_corrections.py  test_experiment.py  test_power.py  test_sequential.py  test_utils.py  test_visualizations.py
